openapi.yaml corrections
